// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio renders correctly 1`] = `
<DocumentFragment>
  .cache-am0vxe-StyledText-variantStyles-StyledRadioContainer-activeFocusClass {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 32px;
  cursor: pointer;
}

.cache-am0vxe-StyledText-variantStyles-StyledRadioContainer-activeFocusClass:hover .e1duuirp3,
.cache-am0vxe-StyledText-variantStyles-StyledRadioContainer-activeFocusClass:focus .e1duuirp3 {
  background-color: rgba(215,204,240,0.25);
  border-radius: 50%;
}

.cache-am0vxe-StyledText-variantStyles-StyledRadioContainer-activeFocusClass:hover .e1duuirp3>.e1duuirp4,
.cache-am0vxe-StyledText-variantStyles-StyledRadioContainer-activeFocusClass:focus .e1duuirp3>.e1duuirp4 {
  fill: #390171;
}

.cache-1p2voni-IconContainer {
  min-width: 32px;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 8px;
}

.cache-5ixesp-StyledIcon-sizeStyles-StyledIcon {
  fill: #dce1eb;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-5ixesp-StyledIcon-sizeStyles-StyledIcon.cache-5ixesp-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
}

.cache-18s3dma-StyledRadio {
  position: absolute;
  opacity: 0.01;
}

.cache-1sztoev-StyledExpandable {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1hzw3uf-StyledError {
  font-size: 12px;
  color: #a6102d;
  padding: 0 4px;
}

<div
    class="cache-3svqc9"
  >
    <label
      class="e1duuirp2 e1g1zfwd0 cache-am0vxe-StyledText-variantStyles-StyledRadioContainer-activeFocusClass"
      for="radio-choice"
    >
      <div
        class="cache-1p2voni-IconContainer e1duuirp3"
      >
        <svg
          class="e1duuirp4 etwatq50 cache-5ixesp-StyledIcon-sizeStyles-StyledIcon"
          viewBox="0 0 24 24"
        >
          <path
            d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
          />
        </svg>
      </div>
      <div>
        Choice
      </div>
      <input
        aria-checked="false"
        class="cache-18s3dma-StyledRadio e1duuirp1"
        id="radio-choice"
        name="radio"
        tabindex="0"
        type="radio"
        value="choice"
      />
    </label>
    <div
      class="e14o3tsk0 cache-1sztoev-StyledExpandable"
    >
      <div
        class="cache-1hzw3uf-StyledError e1duuirp0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Radio renders correctly when checked 1`] = `
<DocumentFragment>
  .cache-am0vxe-StyledText-variantStyles-StyledRadioContainer-activeFocusClass {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 32px;
  cursor: pointer;
}

.cache-am0vxe-StyledText-variantStyles-StyledRadioContainer-activeFocusClass:hover .e1duuirp3,
.cache-am0vxe-StyledText-variantStyles-StyledRadioContainer-activeFocusClass:focus .e1duuirp3 {
  background-color: rgba(215,204,240,0.25);
  border-radius: 50%;
}

.cache-am0vxe-StyledText-variantStyles-StyledRadioContainer-activeFocusClass:hover .e1duuirp3>.e1duuirp4,
.cache-am0vxe-StyledText-variantStyles-StyledRadioContainer-activeFocusClass:focus .e1duuirp3>.e1duuirp4 {
  fill: #390171;
}

.cache-1p2voni-IconContainer {
  min-width: 32px;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 8px;
}

.cache-1auc76i-StyledIcon-sizeStyles-StyledIcon {
  fill: #390171;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-1auc76i-StyledIcon-sizeStyles-StyledIcon.cache-1auc76i-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
}

.cache-18s3dma-StyledRadio {
  position: absolute;
  opacity: 0.01;
}

.cache-1sztoev-StyledExpandable {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1hzw3uf-StyledError {
  font-size: 12px;
  color: #a6102d;
  padding: 0 4px;
}

<div
    class="cache-3svqc9"
  >
    <label
      class="e1duuirp2 e1g1zfwd0 cache-am0vxe-StyledText-variantStyles-StyledRadioContainer-activeFocusClass"
      for="radio-choice"
    >
      <div
        class="cache-1p2voni-IconContainer e1duuirp3"
      >
        <svg
          class="e1duuirp4 etwatq50 cache-1auc76i-StyledIcon-sizeStyles-StyledIcon"
          viewBox="0 0 24 24"
        >
          <path
            d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M12,7A5,5 0 0,0 7,12A5,5 0 0,0 12,17A5,5 0 0,0 17,12A5,5 0 0,0 12,7Z"
          />
        </svg>
      </div>
      <div>
        Choice
      </div>
      <input
        aria-checked="true"
        checked=""
        class="cache-18s3dma-StyledRadio e1duuirp1"
        id="radio-choice"
        name="radio"
        tabindex="0"
        type="radio"
        value="choice"
      />
    </label>
    <div
      class="e14o3tsk0 cache-1sztoev-StyledExpandable"
    >
      <div
        class="cache-1hzw3uf-StyledError e1duuirp0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Radio renders correctly when disabled 1`] = `
<DocumentFragment>
  .cache-izgtk0-StyledText-variantStyles-StyledRadioContainer-disabledClass {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 32px;
  cursor: pointer;
  color: #c4c9d6;
  cursor: not-allowed;
}

.cache-1p2voni-IconContainer {
  min-width: 32px;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 8px;
}

.cache-12489do-StyledIcon-sizeStyles-StyledIcon {
  fill: #f6f5f7;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-12489do-StyledIcon-sizeStyles-StyledIcon.cache-12489do-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
}

.cache-18s3dma-StyledRadio {
  position: absolute;
  opacity: 0.01;
}

.cache-1sztoev-StyledExpandable {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1hzw3uf-StyledError {
  font-size: 12px;
  color: #a6102d;
  padding: 0 4px;
}

<div
    class="cache-3svqc9"
  >
    <label
      class="e1duuirp2 e1g1zfwd0 cache-izgtk0-StyledText-variantStyles-StyledRadioContainer-disabledClass"
      disabled=""
      for="radio-choice"
    >
      <div
        class="cache-1p2voni-IconContainer e1duuirp3"
      >
        <svg
          class="e1duuirp4 etwatq50 cache-12489do-StyledIcon-sizeStyles-StyledIcon"
          viewBox="0 0 24 24"
        >
          <path
            d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
          />
        </svg>
      </div>
      <div>
        Choice
      </div>
      <input
        aria-checked="false"
        aria-disabled="true"
        class="cache-18s3dma-StyledRadio e1duuirp1"
        disabled=""
        id="radio-choice"
        name="radio"
        style="pointer-events: none;"
        type="radio"
        value="choice"
      />
    </label>
    <div
      class="e14o3tsk0 cache-1sztoev-StyledExpandable"
    >
      <div
        class="cache-1hzw3uf-StyledError e1duuirp0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Radio renders correctly when error 1`] = `
<DocumentFragment>
  .cache-am0vxe-StyledText-variantStyles-StyledRadioContainer-activeFocusClass {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 32px;
  cursor: pointer;
}

.cache-am0vxe-StyledText-variantStyles-StyledRadioContainer-activeFocusClass:hover .e1duuirp3,
.cache-am0vxe-StyledText-variantStyles-StyledRadioContainer-activeFocusClass:focus .e1duuirp3 {
  background-color: rgba(215,204,240,0.25);
  border-radius: 50%;
}

.cache-am0vxe-StyledText-variantStyles-StyledRadioContainer-activeFocusClass:hover .e1duuirp3>.e1duuirp4,
.cache-am0vxe-StyledText-variantStyles-StyledRadioContainer-activeFocusClass:focus .e1duuirp3>.e1duuirp4 {
  fill: #390171;
}

.cache-1p2voni-IconContainer {
  min-width: 32px;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 8px;
}

.cache-9sn9fn-StyledIcon-sizeStyles-StyledIcon {
  fill: #cc4e18;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-9sn9fn-StyledIcon-sizeStyles-StyledIcon.cache-9sn9fn-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
}

.cache-18s3dma-StyledRadio {
  position: absolute;
  opacity: 0.01;
}

.cache-1gfilw2-StyledExpandable {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
  -webkit-transition: max-height 300ms ease-in,opacity 300ms ease-in;
  transition: max-height 300ms ease-in,opacity 300ms ease-in;
  max-height: 5000px;
  opacity: 1;
  overflow: visible;
}

.cache-1hzw3uf-StyledError {
  font-size: 12px;
  color: #a6102d;
  padding: 0 4px;
}

<div
    class="cache-3svqc9"
  >
    <label
      class="e1duuirp2 e1g1zfwd0 cache-am0vxe-StyledText-variantStyles-StyledRadioContainer-activeFocusClass"
      for="radio-choice"
    >
      <div
        class="cache-1p2voni-IconContainer e1duuirp3"
      >
        <svg
          class="e1duuirp4 etwatq50 cache-9sn9fn-StyledIcon-sizeStyles-StyledIcon"
          viewBox="0 0 24 24"
        >
          <path
            d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
          />
        </svg>
      </div>
      <div>
        Choice
      </div>
      <input
        aria-checked="false"
        class="cache-18s3dma-StyledRadio e1duuirp1"
        id="radio-choice"
        name="radio"
        tabindex="0"
        type="radio"
        value="choice"
      />
    </label>
    <div
      class="e14o3tsk0 cache-1gfilw2-StyledExpandable"
    >
      <div
        class="cache-1hzw3uf-StyledError e1duuirp0"
      >
        Invalid value
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Radio renders correctly when valid 1`] = `
<DocumentFragment>
  .cache-am0vxe-StyledText-variantStyles-StyledRadioContainer-activeFocusClass {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 32px;
  cursor: pointer;
}

.cache-am0vxe-StyledText-variantStyles-StyledRadioContainer-activeFocusClass:hover .e1duuirp3,
.cache-am0vxe-StyledText-variantStyles-StyledRadioContainer-activeFocusClass:focus .e1duuirp3 {
  background-color: rgba(215,204,240,0.25);
  border-radius: 50%;
}

.cache-am0vxe-StyledText-variantStyles-StyledRadioContainer-activeFocusClass:hover .e1duuirp3>.e1duuirp4,
.cache-am0vxe-StyledText-variantStyles-StyledRadioContainer-activeFocusClass:focus .e1duuirp3>.e1duuirp4 {
  fill: #390171;
}

.cache-1p2voni-IconContainer {
  min-width: 32px;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 8px;
}

.cache-7yuflw-StyledIcon-sizeStyles-StyledIcon {
  fill: #149a7b;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-7yuflw-StyledIcon-sizeStyles-StyledIcon.cache-7yuflw-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
}

.cache-18s3dma-StyledRadio {
  position: absolute;
  opacity: 0.01;
}

.cache-1sztoev-StyledExpandable {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1hzw3uf-StyledError {
  font-size: 12px;
  color: #a6102d;
  padding: 0 4px;
}

<div
    class="cache-3svqc9"
  >
    <label
      class="e1duuirp2 e1g1zfwd0 cache-am0vxe-StyledText-variantStyles-StyledRadioContainer-activeFocusClass"
      for="radio-choice"
    >
      <div
        class="cache-1p2voni-IconContainer e1duuirp3"
      >
        <svg
          class="e1duuirp4 etwatq50 cache-7yuflw-StyledIcon-sizeStyles-StyledIcon"
          viewBox="0 0 24 24"
        >
          <path
            d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
          />
        </svg>
      </div>
      <div>
        Choice
      </div>
      <input
        aria-checked="false"
        class="cache-18s3dma-StyledRadio e1duuirp1"
        id="radio-choice"
        name="radio"
        tabindex="0"
        type="radio"
        value="choice"
      />
    </label>
    <div
      class="e14o3tsk0 cache-1sztoev-StyledExpandable"
    >
      <div
        class="cache-1hzw3uf-StyledError e1duuirp0"
      />
    </div>
  </div>
</DocumentFragment>
`;
